test/spec/store_retval.txt
;;; TOOL: run-js-spec
;;; STDIN_FILE: third_party/testsuite/store_retval.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/store_retval.wast:34:25: type mismatch of set_local. got i32, expected i64
        (set_local $i64 (set_local $i32 (i32.const 1)))))
                        ^
assert_invalid error:
  third_party/testsuite/store_retval.wast:39:25: type mismatch of set_local. got i64, expected i32
        (set_local $i32 (set_local $i64 (i64.const 1)))))
                        ^
assert_invalid error:
  third_party/testsuite/store_retval.wast:44:25: type mismatch of set_local. got f32, expected f64
        (set_local $f64 (set_local $f32 (f32.const 1)))))
                        ^
assert_invalid error:
  third_party/testsuite/store_retval.wast:49:25: type mismatch of set_local. got f64, expected f32
        (set_local $f32 (set_local $f64 (f64.const 1)))))
                        ^
1
2
3
4
11
12
13
14
512
65536
512
65536
0
$invoke_0 = undefined
0/0 tests passed.
;;; STDOUT ;;)
